--- a/estilos/tribokem.css
+++ b/estilos/tribokem.css
@@ -1,4 +1,4 @@
-h1{
+h1.t{
     color: #f2f2f2;
     background-color:#223740 ;
     text-align: center;
@@ -42,4 +42,8 @@ div.busqueda{
 }
 .cuadro-busqueda{
     width: 40%;
+}
+.carrusel{
+    width: 90%;
+    margin: auto;
 }
