--- a/estilos/tribokem.css
+++ b/estilos/tribokem.css
@@ -8,7 +8,7 @@ h1.t{
     opacity: 0.8;
 }
 body{
-    background-color: #f2f2f2;
+    background-color: #f2f2f2c7;
 }
 ul.menu{
     list-style-type: none;
