--- a/estilos/tribokem.css
+++ b/estilos/tribokem.css
@@ -7,6 +7,11 @@ h1.t{
     font-size: 70px;
     opacity: 0.8;
 }
+h2.subtitle{
+    margin-top: 10px;
+    margin-bottom: 15px;
+    text-align: center;
+}
 body{
     background-color: #f2f2f2c7;
 }
@@ -46,4 +51,16 @@ div.busqueda{
 .carrusel{
     width: 90%;
     margin: auto;
+}
+.productos-destacados{
+    width: 90%;
+    margin: auto;
+}
+footer.final{
+    width: 100%;
+    height: 300px;
+    border: 1px solid;
+    background-color: #223740;
+    color: #f2f2f2;
+    display:grid
 }
