--- a/estilos/tribokem.css
+++ b/estilos/tribokem.css
@@ -35,6 +35,7 @@ li.menu a:hover{
     background-color: #223740;
     color: #f2f2f2;
 }
+
 .resumen{
     width: 90%;
     margin: auto;
@@ -57,6 +58,19 @@ li.menu a:hover{
     width: 90%;
     margin: auto;
 }
+.principales-clientes{
+    width: 90%;
+    border: 1px solid;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: 100px;
+    gap: 4px;
+}
+.cliente{
+    border: 1px solid#15BFBF;
+    text-align: center;
+}
 footer.final{
     width: 100%;
     height: 300px;
@@ -64,4 +78,51 @@ footer.final{
     background-color: #223740;
     color: #f2f2f2;
     display:grid
+}
+
+.cuadro-1{
+    display: grid;
+    width: 90%;
+    margin: auto;
+    border: 1px solid ;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 150px;
+    gap: 10px;
+}
+
+.info-nosotros{
+    border: 1px solid #15BFBF;
+}
+.imagen-nosotros{
+    border: 1px solid greenyellow;
+}
+
+.codigo-etica{
+    display: grid;
+    width: 90%;
+    margin: auto;
+    border: 1px solid ;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: 150px;
+    gap: 10px;
+    align-content: center;
+}
+div.valor{
+    text-align: center;
+    border: 1px solid salmon;
+}
+
+.sectores-enfocados{
+    display: grid;
+    width: 90%;
+    margin: auto;
+    border: 1px solid ;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: 150px;
+    gap: 10px;
+    align-content: center;
+}
+.sector{
+    text-align: center;
+    border: 1px solid #15BFBF;
 }
